# pyvolve

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
tests/: evolver_test.py  model_test.py
