[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Pyvolve"
version = "1.1.0"
description = "Sequence simulation along phylogenies according to continuous-time Markov models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stephanie J. Spielman", email = "spielman@rowan.edu"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "biopython>=1.80",
]

[project.urls]
Homepage = "https://github.com/sjspielman/pyvolve"
Repository = "https://github.com/sjspielman/pyvolve"
Documentation = "https://sjspielman.github.io/pyvolve"

[tool.setuptools]
packages = ["pyvolve"]

[tool.setuptools.package-dir]
pyvolve = "src"

[tool.setuptools.package-data]
pyvolve = ["paml_models/*"]
